--- a/TheLastTime.Shared/Components/NavMenu.razor
+++ b/TheLastTime.Shared/Components/NavMenu.razor
@@ -4,7 +4,7 @@
         <span class="fa fa-fw fa-bars"></span>
     </button>
 
-    <span class="navbar-text" id="ididit">ididit!</span>
+    <span class="navbar-text" id="ididit">Sutter App</span>
 
     <button class="navbar-toggler" @onclick="ToggleOptions">
         <span class="fa fa-fw fa-cog"></span>
